fixed dependency management

--- a/1-eventimp/gemset/ruby/2.2.0/gems/nokogiri-1.6.6.2/ext/nokogiri/Makefile
+++ b/1-eventimp/gemset/ruby/2.2.0/gems/nokogiri-1.6.6.2/ext/nokogiri/Makefile
@@ -31,8 +31,8 @@ rubyhdrdir = $(includedir)/$(RUBY_VERSION_NAME)
 vendorarchdir = $(vendorlibdir)/$(sitearch)
 vendorlibdir = $(vendordir)/$(ruby_version)
 vendordir = $(rubylibprefix)/vendor_ruby
-sitearchdir = $(DESTDIR)./.gem.20151016-875-123uzu6
-sitelibdir = $(DESTDIR)./.gem.20151016-875-123uzu6
+sitearchdir = $(DESTDIR)./.gem.20151017-3672-3oaz8w
+sitelibdir = $(DESTDIR)./.gem.20151017-3672-3oaz8w
 sitedir = $(rubylibprefix)/site_ruby
 rubyarchdir = $(rubylibdir)/$(arch)
 rubylibdir = $(rubylibprefix)/$(ruby_version)
