--- a/1-eventimp/eventimp/Gemfile
+++ b/1-eventimp/eventimp/Gemfile
@@ -1,18 +1,14 @@
 source 'https://rubygems.org'
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.4'
-# Use Mongoid for DB
-gem 'mongoid', '~> 5.0.0'
-# Use SCSS for stylesheets
-gem 'sass-rails', '~> 5.0'
-# Use Uglifier as compressor for JavaScript assets
-gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
-gem 'coffee-rails', '~> 4.1.0'
+# gem 'coffee-rails', '~> 4.1.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
+
+# use MongoDB as the default database
+gem 'mongoid', '~> 5.0.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
