railstutorial ch. 5; added layout snippets, understand naming routes and assert_select testing

--- a/1-eventimp/eventimp/Gemfile
+++ b/1-eventimp/eventimp/Gemfile
@@ -10,8 +10,15 @@ gem 'rails', '4.2.4'
 # use MongoDB as the default database
 gem 'mongoid', '~> 5.0.0'
 
+# use Sprockets afterall...
+gem 'sprockets', '~> 3.0'
+gem 'sprockets-rails', :require => 'sprockets/railtie'
+
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
+# use bootstrap as the CSS framework
+gem 'bootstrap-sass', '3.2.0.0'
+
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
