added pry (needed for emacs autocompletion)

--- a/1-eventimp/eventimp/Gemfile
+++ b/1-eventimp/eventimp/Gemfile
@@ -38,6 +38,10 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  
+  # Emacs Autocompletion Dependencies:
+  gem 'pry'
+  gem 'pry-doc', '>= 0.6.0'
 end
 
 group :development do
