User registration (ch. 7) and more fun with routes.rb

--- a/1-eventimp/eventimp/config/mongoid.yml
+++ b/1-eventimp/eventimp/config/mongoid.yml
@@ -130,6 +130,6 @@ test:
       hosts:
         - localhost:27017
       options:
-        read:
-          mode: primary
+        # read:
+        #   mode: primary
         max_pool_size: 1
